welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:17: error: Unmatched closing brace '}' ignored here
	}
        ^